data/derived/comb/progs/unify/prog7876.ml.out
Characters 171-173:
  l1 l2;;
  ^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
